--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,4 @@
-body {
-  margin: 0;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-.container {
-  margin-right: auto;
-  margin-left: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-@media (min-width: 768px) {
-  .container {
-    width: 750px;
-  }
-}
-@media (min-width: 992px) {
-  .container {
-    width: 970px;
-  }
-}
-@media (min-width: 1260px) {
-  .container {
-    width: 1200px;
-  }
-}
-
-footer {
-  background-color: #323544;
-  color: #fff;
-  padding: 30px 0 0;
-  position: relative;
-}
-footer .footer-row {
-  display: flex;
-  flex-wrap: wrap;
-}
-footer .footer-row .footer-menu {
-  flex: 100%;
-  margin-bottom: 30px;
-  list-style-type: none;
-}
-@media (min-width: 768px) {
-  footer .footer-row .footer-menu {
-    flex: 50%;
-  }
-}
-@media (min-width: 992px) {
-  footer .footer-row .footer-menu {
-    flex: 25%;
-  }
-}
-@media (min-width: 1260px) {
-  footer .footer-row .footer-menu {
-    margin-bottom: 40px;
-  }
-}
-footer .footer-row .footer-menu a {
-  text-decoration: none;
-}
-footer .footer-row .footer-menu h4 {
-  text-transform: uppercase;
-  font-size: 1rem;
-  margin-bottom: 26px;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 /* Box sizing rules */
 *,
 *::before,
@@ -139,6 +71,114 @@ textarea:not([rows]) {
 /* Anything that has been anchored to should have extra scroll margin */
 :target {
   scroll-margin-block: 5ex;
+}
+
+body {
+  margin: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+.img {
+  min-width: 360px;
+  height: auto;
+}
+
+h4 {
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin-bottom: 26px;
+}
+
+.logo {
+  margin: 0px 7px 0px 0px;
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) {
+  .container {
+    width: 970px;
+  }
+}
+@media (min-width: 1260px) {
+  .container {
+    width: 1200px;
+  }
+}
+
+footer {
+  background-color: #323544;
+  color: #fff;
+  padding: 30px 0 0;
+  position: relative;
+  margin-top: auto;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+footer .footer-logo-box {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+}
+footer .footer-menu-box {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  flex: 1;
+}
+footer .footer-social-logos svg {
+  height: 3em;
+  width: 3em;
+}
+footer .footer-row {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  margin-bottom: 30%;
+}
+footer .footer-row .footer-menu {
+  flex: 100%;
+  margin-bottom: 30px;
+  list-style-type: none;
+}
+@media (min-width: 768px) {
+  footer .footer-row .footer-menu {
+    flex: 50%;
+  }
+}
+@media (min-width: 992px) {
+  footer .footer-row .footer-menu {
+    flex: 25%;
+  }
+}
+@media (min-width: 1260px) {
+  footer .footer-row .footer-menu {
+    margin-bottom: 40px;
+  }
+}
+footer .footer-row .footer-menu a {
+  text-decoration: none;
+}
+footer .footer-row .footer-menu a:hover {
+  text-decoration: underline;
+}
+footer .footer-row .footer-menu h4 {
+  text-transform: uppercase;
+  font-size: 1rem;
+  margin-bottom: 26px;
 }
 
 /*# sourceMappingURL=style.css.map */
