--- a/scss/utilities/_config.scss
+++ b/scss/utilities/_config.scss
@@ -1,8 +1,10 @@
 // Colours //
 
-$white     : #fff;
-$dark-blue : #323544;
+$white       : #fff;
+$dark-blue   : #323544;
+$darker-blue : #212330;
 
 // Colour variables //
 
-$background-primary : $dark-blue; 
+$background-primary    : $dark-blue;
+$background-secondary  : $darker-blue;
