--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,14 @@ textarea:not([rows]) {
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   margin: 0;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
 }
 
 .container {
@@ -110,23 +117,27 @@ body {
   }
 }
 
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
 .middle {
   display: flex;
+  flex: 1;
   background-color: #323544;
   color: #fff;
 }
-
 .middle a {
   text-decoration: none;
   color: #fff;
 }
 .middle a:hover {
   text-decoration: underline;
+}
+
+.strong-title {
+  font-size: 2.25rem;
+  font-weight: 600;
+}
+
+.middle-paragraph {
+  font-weight: bolder;
 }
 
 footer {
@@ -138,24 +149,83 @@ footer {
   margin: 0;
 }
 
-.footer-row {
+.footer-logo-box h4 {
+  margin-top: 24px;
+  margin-bottom: 26px;
+  text-transform: uppercase;
+}
+
+.footer-menu {
+  flex: 100%;
+  margin-bottom: 30px;
+}
+.footer-menu li {
+  font-size: 0.8125rem;
+  line-height: 1.375rem;
+}
+.footer-menu h4 {
+  font-size: 1rem;
+  line-height: 18px;
+  margin-bottom: 26px;
+  margin-top: 0;
+  text-transform: uppercase;
+}
+@media (min-width: 768px) {
+  .footer-menu {
+    flex: 50%;
+  }
+}
+@media (min-width: 992px) {
+  .footer-menu {
+    flex: 25%;
+  }
+}
+@media (min-width: 1260px) {
+  .footer-menu {
+    margin-bottom: 40px;
+  }
+}
+
+.footer-flex-container {
   display: flex;
-  flex-direction: row;
-  margin-bottom: 0;
+}
+@media (min-width: 480px) {
+  .footer-flex-container {
+    flex-direction: column;
+  }
 }
 
 .footer-logo-box {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  flex: 1;
+}
+.footer-social-logos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+@media (min-width: 480px) {
+  .footer-social-logos {
+    margin-bottom: 30px;
+  }
 }
 
 .footer-menu-box {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 100%;
-  flex: 1;
+}
+@media (min-width: 413px) {
+  .footer-menu-box {
+    flex-wrap: wrap;
+    flex-direction: column;
+    flex-basis: auto;
+  }
+}
+@media (min-width: 992px) {
+  .footer-menu-box {
+    flex-direction: row;
+  }
 }
 
 footer li {
@@ -167,31 +237,6 @@ footer a {
 }
 footer a:hover {
   text-decoration: underline;
-}
-
-.footer-menu li {
-  font-size: 0.8125rem;
-  line-height: 1.375rem;
-}
-
-.footer-menu h4 {
-  font-size: 1rem;
-  line-height: 18px;
-  margin-bottom: 26px;
-  margin-top: 0;
-  text-transform: uppercase;
-}
-
-.footer-social-logos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
-
-.footer-logo-box h4 {
-  margin-top: 24px;
-  margin-bottom: 26px;
-  text-transform: uppercase;
 }
 
 .logo-button {
@@ -213,39 +258,27 @@ footer a:hover {
   display: block;
 }
 
-.img {
-  min-width: 360px;
-  height: auto;
-}
-
-.footer-row {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-}
-.footer-row .footer-menu {
-  flex: 100%;
-  margin-bottom: 30px;
-}
-@media (min-width: 768px) {
-  .footer-row .footer-menu {
-    flex: 50%;
+@media (min-width: 1px) {
+  .img {
+    min-width: 250px;
+    min-height: 51.25px;
   }
 }
-@media (min-width: 992px) {
-  .footer-row .footer-menu {
-    flex: 25%;
+@media (min-width: 480px) {
+  .img {
+    min-width: 250px;
+    min-height: 51.25px;
   }
 }
-@media (min-width: 1260px) {
-  .footer-row .footer-menu {
-    margin-bottom: 40px;
+@media (min-width: 413px) {
+  .img {
+    width: 320px;
+    width: 320px;
+    height: 65.59;
   }
 }
 
 .footer-bottom-box {
-  display: flex;
-  justify-content: space-between;
   background-color: #212330;
   color: #fff;
   font-size: 0.8125rem;
@@ -254,15 +287,46 @@ footer a:hover {
   padding-top: 5px;
   padding-bottom: 10px;
 }
-.footer-bottom-box a {
-  text-decoration: none;
+.footer-bottom-box ul {
+  padding-left: 0;
 }
-.footer-bottom-box a:hover {
-  text-decoration: underline;
+.footer-bottom-box .license-3 {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.footer-bottom-box {
+  display: flex;
+}
+.footer-bottom-box .row {
+  align-items: center;
+}
+
+.license-1 {
+  display: flex;
+}
+
+.license-2 {
+  display: flex;
+}
+
+.license-3 {
+  display: flex;
+}
+
+.license-4 {
+  display: flex;
 }
 
 .footer-bottom-box li {
-  list-style-type: "- ";
+  list-style-type: none;
+}
+
+.license-4 a {
+  text-decoration: none;
+}
+.license-4 a:hover {
+  text-decoration: underline;
 }
 
 /*# sourceMappingURL=style.css.map */
